--- a/my-shop/src/App.css
+++ b/my-shop/src/App.css
@@ -82,7 +82,7 @@ h6 {
 .empty-search {
   text-align: center;
   text-transform: capitalize;
-  margin: 2rem 0;
+  margin: 2rem 0 11.5%;
   padding: 1rem;
   letter-spacing: var(--mainSpacing);
 }
@@ -552,3 +552,25 @@ h6 {
   }
 }
 /* end of footer */
+
+.btn-remove {
+  display: inline-block;
+  text-decoration: none;
+  letter-spacing: var(--mainSpacing);
+  color: var(--mainBlack);
+  background: var(--primaryColor);
+  padding: 0 2rem;
+  border: 1.5px solid var(--primaryColor);
+  transition: var(--mainTransition);
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.btn-font {
+  margin: 0 0 5% 5%; 
+  padding:0 0 5% 5%;
+  font-size: 30px;
+}
+.align-cart {
+  padding: 0.5rem 0;
+  text-align: center;
+}
