--- a/my-shop/src/App.css
+++ b/my-shop/src/App.css
@@ -31,6 +31,7 @@ h1 {
 h2 {
   font-size: 2em;
   margin-bottom: 0.75em;
+  text-align: center;
 }
 h3 {
   font-size: 1.5em;
@@ -118,9 +119,10 @@ h6 {
   outline: none;
 }
 /* cart button is the right */
-#cart-right {
-  padding-left: 600px;
+#cart-right1 {
+  padding-left: 550px;
 }
+
 .nav-links {
   height: 0;
   overflow: hidden;
@@ -488,7 +490,10 @@ h6 {
   background: transparent;
   font-size: 1rem;
 }
-.size-inputs {
+.single-extra {
+  width: 100%;
+}
+/* .size-inputs {
   display: flex;
 }
 .size-input {
@@ -497,7 +502,7 @@ h6 {
   border: 1px solid var(--mainBlack);
   border-radius: 0.3rem;
   margin-right: 0.3rem;
-}
+} */
 .single-extra label {
   display: inline-block;
   font-size: 0.8rem;
@@ -530,6 +535,9 @@ h6 {
   margin: 0 auto;
   display: flex;
   grid-column-gap: 10px;
+}
+#input-email {
+  width: 18%;
 }
 @media screen and (min-width: 200px) {
   .footer-center {
@@ -810,10 +818,117 @@ h6 {
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
   .column, input[type=submit] {
     width: 100%;
     margin-top: 0;
   }
-}
+} */
 /* end of slider  */
+
+
+/* start of login */
+.container3 {
+  position: relative;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px 87px 30px 77px;
+  width: 86%;
+  margin-left: 7%;
+} 
+
+/* style inputs and link buttons */
+input,
+.btn {
+  padding: 12px;
+  border: none;
+  border-radius: 4px;
+}
+
+input:hover,
+.btn:hover {
+  opacity: 1;
+}
+
+/* add appropriate colors to fb, twitter and google buttons */
+.fb {
+  background-color: #3B5998;
+  color: white;
+}
+
+.twitter {
+  background-color: #55ACEE;
+  color: white;
+}
+
+.google {
+  background-color: #dd4b39;
+  color: white;
+}
+
+/* style the submit button */
+/* input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+} */
+
+/* Two-column layout */
+.col {
+  float: left;
+  width: 50%;
+  margin: auto;
+  padding: 0 50px;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* vertical line */
+.vl {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  border: 2px solid #ddd;
+  height: 46px;
+}
+
+/* text inside the vertical line */
+.vl-innertext {
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #f1f1f1;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  padding: 8px 10px;
+}
+
+/* hide some text on medium and large screens */
+.hide-md-lg {
+  display: none;
+}
+
+/* bottom container */
+.bottom-container {
+  text-align: center;
+  border-radius: 0px 0px 4px 4px;
+  width: 86%;
+  margin-left: 7%;
+}
+
+/* end of login  */
+
+.search {
+  margin-left: -35%;
+
+}
