--- a/my-shop/src/App.css
+++ b/my-shop/src/App.css
@@ -31,7 +31,6 @@ h1 {
 h2 {
   font-size: 2em;
   margin-bottom: 0.75em;
-  text-align: center;
 }
 h3 {
   font-size: 1.5em;
@@ -42,6 +41,8 @@ h4 {
   font-size: 1.2em;
   line-height: 1.25;
   margin-bottom: 1.25em;
+  text-align: center;
+
 }
 h5 {
   font-size: 1em;
@@ -569,6 +570,8 @@ h6 {
   position: relative;
   overflow: auto;
   width: 100%;
+  margin-top: 4rem;
+  margin-bottom:2rem;
 }
 .col, .quantity, .remove {
   float: left;
