--- a/my-shop/src/App.css
+++ b/my-shop/src/App.css
@@ -558,7 +558,6 @@ h6 {
   border-top: 1px solid #ddd;
 }
 .products > li {
-  padding: 1rem;
   border-bottom: 1px solid #ddd;
 }
 .col img {
@@ -839,9 +838,24 @@ h6 {
   width: 86%;
   margin-left: 7%;
 } 
-
+/* #summit-login {
+  display: inline-block;
+  text-decoration: none;
+  letter-spacing: var(--mainSpacing);
+  color: var(--mainBlack);
+  background: var(--primaryColor);
+  padding: 0.4rem 0.9rem;
+  border: 3px solid var(--primaryColor);
+  transition: var(--mainTransition);
+  text-transform: uppercase;
+  cursor: pointer;
+} */
 /* style inputs and link buttons */
-input,
+.container3 > input {
+  padding: 12px;
+  border: none;
+  border-radius: 4px;
+}
 .btn {
   padding: 12px;
   border: none;
@@ -930,8 +944,3 @@ input[type=submit]:hover {
 }
 
 /* end of login  */
-
-.search {
-  margin-left: -35%;
-
-}
