--- a/my-shop/src/App.css
+++ b/my-shop/src/App.css
@@ -944,3 +944,30 @@ input[type=submit]:hover {
 }
 
 /* end of login  */
+
+/* Login example */
+.content {
+  padding: 20px;
+}
+ 
+.header {
+  padding: 10px;
+  background: #edf2f4;
+  border-bottom: 1px solid #999;
+}
+.header a {
+  color: #0072ff;
+  text-decoration: none;
+  margin-left: 20px;
+  margin-right: 5px;
+}
+.header a:hover {
+  color: #8a0f53;
+}
+.header small {
+  color: #666;
+}
+.header .active {
+  color: #2c7613;
+}
+/* End of Login example */
